X 0.2
    * Add Bow + Aqua Affinity = freeze water, stun players

2012-01-29  0.1
    * Initial release